--- a/src/App.css
+++ b/src/App.css
@@ -240,9 +240,9 @@ body{
     margin-top: 20px;
     border-radius: 10px;
     justify-self: center;
-    padding: 10px 10px;
+    padding: 25px 15px;
+    overflow: hidden;
 }
-
 
 .BestWorst{
     width: 100%;
@@ -270,21 +270,30 @@ body{
     font-weight: 600;
 }
 #graph{
-    width: 80%;
-    height: 35vh;
+    width: 85%;
+    height: 33vh;
 }
 #radar{
     width: 100%;
-    height: 35vh;
+    height: 30vh;
 }
 #pie{
     width: 100%;
-    height: 35vh;
+    height: 30vh;
 }
 
 .lower{
     display: flex;
+    justify-content: center;
+    align-items: center;
     margin-top: 30px;
+    padding: 15px;
+}
+
+.examGraph{
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
 /* --------------------------- Bottom ------------------------------------ */
 
