--- a/src/App.css
+++ b/src/App.css
@@ -23,20 +23,36 @@ body{
     display: flex;
     justify-content: center;
     width: 100%;
-    height: 17vh;
-    padding: 5px 10px;
+    height: auto;
+    padding: 10px 10px;
 }
 
 .topRight{
     width: 50%;
+    display: flex;
+    justify-content: flex-end ;
+    align-items: center;
+}
+.topRight button{
+    height: 8vh;
+    display: flex;
+    gap: 5px;
+    align-items: center
 }
 
 .topLeft{
     width: 50%;
+    padding: 5px 10px;
+}
+
+#icon{
+    font-size: 5em;
 }
 
 #logo{
     color: var(--font-primary);
+    font-size: 3em;
+    margin-bottom: 10px;
 }
 
 #uniLabel{
@@ -47,6 +63,9 @@ body{
     border-radius: 5px;
 }
 
+#uni{
+    height: 4vh;
+}
 
 /*----------------------- Main -------------------------------------------------- */
 .mainContent{
@@ -240,8 +259,14 @@ body{
     margin-top: 20px;
     border-radius: 10px;
     justify-self: center;
-    padding: 25px 15px;
+    padding: 20px 15px;
     overflow: hidden;
+}
+
+#Atitle{
+    margin-bottom: 10px;
+    font-size: 2em;
+    font-weight: 1200;
 }
 
 .BestWorst{
