--- a/src/App.css
+++ b/src/App.css
@@ -154,7 +154,7 @@ body{
 .avg{
     width: 50%;
     justify-self: center;
-    height: 25vh;
+    height: 20vh;
     background-color: var(--primary);
     padding: 5px 10px;
     border-radius: 8px;
@@ -181,76 +181,7 @@ body{
     height: 1.5vh;
     border-radius: 10px;
 }
-
-/* ------------------   side   ---------------------------- */
-.side{
-    position: sticky;
-    z-index: 2;
-}
-
-#sideSection{
-    position: absolute;
-    width: 40%;
-    height: 70vh;
-    background-color: var(--secondary);
-    display: flex;
-    transition: transform 0.5s cubic-bezier(0, 0.56, 0.6, 0.99);
-    padding: 10px;
-
-}
-
-.options{
-    width: 100%;
-    height: 100%;
-    position: absolute;
-}
-
-#uni{
-    color: white;
-}
-
-.uniChose{
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-}
-
-.uniWR{
-    width: 100%;
-}
-
-.uniWR label{
-    color: black;
-    font-weight: 700;
-    padding: 10px ;
-}
-
-.sideBtns{
-    position: relative;
-    height: 100%;
-    width: 10%;
-    left: 100%;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-}
-.sideBtns button{
-    width: 90%;
-    background-color: rgb(255, 255, 233);
-    color: black;
-    border-bottom-right-radius: 7px;
-    border-top-right-radius: 7px;
-    margin-top: 10px;
-    padding: 5px;
-    writing-mode: vertical-rl;
-    transition: width 0.8s cubic-bezier(0, 0.74, 0.44, 1.02) ;
-    border: none;
-}
-
-.sideBtns button:hover{
-    width: 130%;
-}
-    
+   
 /* -------------------Analytics side -------------------------------------- */
 .analyticsContainer{
     width: 90%;
@@ -274,6 +205,7 @@ body{
     height: auto;
     display: flex;
     justify-content: space-around;
+    margin-bottom: 10px;
 
 }
 
@@ -300,7 +232,7 @@ body{
 }
 #radar{
     width: 100%;
-    height: 30vh;
+    height: 30vh;   
 }
 #pie{
     width: 100%;
@@ -325,6 +257,8 @@ body{
 .bottomContent{
     display: flex;
     height: 8vh;
+    align-items: center;
+    justify-content: center;
 }
 
 .bottomRight{
